@@ -1,3 +1,12 @@
+2021-07-15  Alex Richardson  <Alexander.Richardson@cl.cam.ac.uk>
+
+	* tests/issue-1063/main.c (main): Fix uninitialized variable.
+
+	I tried running `meson test` but the test just crashed and gdb
+	reported that the face argument to `FT_Get_Char_Index` was nonsense. 
+	With this change the test prints 'Could not open file: ' as it
+	should.
+
 2021-07-16  Werner Lemberg  <wl@gnu.org>
 
 	[smooth] Minor fixes.
